[Add] More routes to the swagger-config.yaml [Add] periodic health checker to BoincManager [Add] Better gzip handling and E-Tags to /language endpoint [Refactor] Some E-Tag handling functions
