# jvm/src/main/resources/swagger/swagger-config.yaml
@@ -161,6 +161,45 @@ paths:
                   type: string
         '401':
           description: Either invalid or no token was provided
+    post:
+      summary: Add a Host to the server
+      tags:
+        - Boinc
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: TODO
+    patch:
+      summary: Edit a Host on the server
+      tags:
+        - Boinc
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: TODO
+    delete:
+      summary: Remove a Host from the server
+      tags:
+        - Boinc
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: TODO
+
+  /api/boinc/host_details:
+    get:
+      summary: More host details
+      tags:
+        - Boinc
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: TODO
+
 
 
   /api/config:
@@ -248,6 +287,15 @@ paths:
                 $ref: '#/components/schemas/BoincProjectMetaData'
         '401':
           description: Either invalid or no token was provided
+    post:
+      summary: Modify projects that the BOINC Webmanager has stored in the internal Database
+      tags:
+        - Boinc
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: TODO
 
   /api/boinc/{hostname}/tasks:
     get:
@@ -404,7 +452,7 @@ paths:
         '401':
           description: Either invalid or no token was provided
 
-  /api/boinc/{hostname}/project:
+  /api/boinc/{hostname}/projects:
     get:
       tags:
         - Boinc
@@ -429,6 +477,8 @@ paths:
                   $ref: '#/components/schemas/Project'
         '401':
           description: Either invalid or no token was provided
+
+  /api/boinc/{hostname}/project:
     patch:
       tags:
         - Boinc
@@ -849,6 +899,52 @@ paths:
                 $ref: '#/components/schemas/ServerStatus'
         '401':
           description: Either invalid or no token was provided
+
+  /hardware/{hostname}:
+    get:
+      tags:
+        - Hardware
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: A list of all Hosts that support the Hardware Extension
+
+  /hardware/{hostname}/cpufrequency:
+    get:
+      tags:
+        - Hardware
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: TODO
+
+  /hardware/{hostname}/sensors:
+    get:
+      tags:
+        - Hardware
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: TODO
+
+  /webrpc/status/:
+    get:
+      tags:
+        - WebRPC
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: query
+          name: server
+          schema:
+            type: URL
+      responses:
+        '200':
+          description: TODO
+
 
 components:
   securitySchemes:
