# jvm/src/main/scala/at/happywetter/boinc/util/http4s/ResponseEncodingHelper.scala
@@ -1,14 +1,13 @@
 package at.happywetter.boinc.util.http4s
 
-import cats.effect.{ContextShift, IO}
-import org.http4s.dsl.io._
-import org.http4s.util.CaseInsensitiveString
-import org.http4s.{Header, Headers, Request, Response, Status}
-import upickle.default.{Writer, write, writeBinary}
+import at.happywetter.boinc.server.bootUpTime
 import at.happywetter.boinc.util.http4s.Implicits._
+import at.happywetter.boinc.util.http4s.ResponseEncodingHelper.withNotMatchingEtag
+import cats.effect.IO
+import org.http4s._
+import org.http4s.dsl.io._
 import org.typelevel.ci.CIString
-
-import scala.concurrent.{ExecutionContext, Future}
+import upickle.default.{Writer, write, writeBinary}
 
 /**
   * Hint: This was caused by updating http4s from 0.18.0 to 0.21.0-M4
@@ -21,19 +20,17 @@ import scala.concurrent.{ExecutionContext, Future}
   */
 trait ResponseEncodingHelper {
 
-  protected implicit val contextShift: ContextShift[IO] = IO.contextShift(ExecutionContext.global)
-
   private val HEADER_MSGPACK = Header("Content-Type", "application/messagepack")
   private val HEADER_JSON    = Header("Content-Type", "application/json")
-
-  @inline protected def Ok[T](f: Future[T], req: Request[IO])(implicit encoder: Writer[T]): IO[Response[IO]] =
-    IO.fromFuture( IO(f) ).flatMap(a => encode(a, req))
 
   @inline protected def Ok[T](f: IO[T], req: Request[IO])(implicit encoder: Writer[T]): IO[Response[IO]] =
     f.flatMap(a => encode(a, req))
 
   @inline protected def Ok[T](f: T, req: Request[IO])(implicit encoder: Writer[T]): IO[Response[IO]] =
     encode(f, req)
+
+  @inline protected def OkWithEtag[T](f: T, eTag: String, req: Request[IO])(implicit encoder: Writer[T]): IO[Response[IO]] =
+    encodeWithEtag(f, eTag, req)
 
   @inline
   private def encode[T](response: T, request: Request[IO])(implicit encoder: Writer[T]): IO[Response[IO]] =
@@ -49,12 +46,30 @@ trait ResponseEncodingHelper {
     IO.pure(
       request.headers.get(CIString("Accept")).map(_.value) match {
         case Some("application/json")        => new Response[IO](status = status, body = write(body), headers = Headers.of(HEADER_JSON))
-        case Some("application/messagepack") => new Response[IO](status = status, body = writeBinary(body), headers = Headers.of(HEADER_MSGPACK))
-        case Some("*/*")                     => new Response[IO](status = status, body = writeBinary(body), headers = Headers.of(HEADER_MSGPACK))
+        //case Some("application/messagepack") => new Response[IO](status = status, body = writeBinary(body), headers = Headers.of(HEADER_MSGPACK))
+        //case Some("*/*")                     => new Response[IO](status = status, body = writeBinary(body), headers = Headers.of(HEADER_MSGPACK))
 
         case _ => new Response[IO](status = status, body = writeBinary(body), headers = Headers.of(HEADER_MSGPACK))
       }
     )
 
+  private def encodeWithEtag[T](body: T, eTag: String, request: Request[IO])(implicit encoder: Writer[T]): IO[Response[IO]] =
+    withNotMatchingEtag(request, eTag) {
+      encode(body, request).map(_.putHeaders(
+        Header("Last-Modified", bootUpTime),
+        Header("ETag", eTag)
+      ))
+    }
+
+}
+
+object ResponseEncodingHelper {
+
+  def withNotMatchingEtag(request: Request[IO], eTag: String)(response: IO[Response[IO]]): IO[Response[IO]] = {
+    request.headers.get(CIString("If-None-Match")).map { etag =>
+      if (etag.value == eTag) IO.pure(new Response[IO](status = NotModified))
+      else response
+    }.getOrElse(response)
+  }
 
 }
